# ddd-fastapi-hexagonal

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  bounded-context-and-acl.md  project-structure.md  testing.md
src/task_management/: __init__.py  main.py
src/task_management/application/: acl.py  assemblers.py  dto.py  event_handlers.py  read_models.py  services.py  use_cases.py
src/task_management/domain/: errors.py  events.py  models.py  ports.py  services.py
src/task_management/infrastructure/: config.py  event_bus.py  repository.py
src/task_management/interfaces/acl/: __init__.py  task_import_acl.py
src/task_management/interfaces/http/: api.py  schemas.py
tests/: conftest.py  test_api.py  test_application.py  test_domain.py  test_quality.py
